[project]
name = "screening-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nancycho", email = "nancy1xn1xn@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.14",
    "langchain-text-splitters>=0.3.5",
    "requests>=2.32.3",
    "news-please>=1.6.13",
    "mysqlclient>=2.2.7",
    "qdrant-client>=1.13.0",
    "langchain-openai>=0.3.1",
    "sentence-transformers>=3.3.1",
    "pytest>=8.3.4",
    "streamlit>=1.42.2",
    "more-itertools>=10.6.0",
    "tomark>=0.1.4",
    "pydantic-settings>=2.9.1",
]

[project.scripts]
screening-rag = "screening_rag.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
